--- a/src/app/pages/basic-page/basic-page.html
+++ b/src/app/pages/basic-page/basic-page.html
@@ -1,1 +1,24 @@
-<p>basic-page works!</p>
+<section class="mx-5">
+  <h1 class="text-2xl font-bold">Pipes Básicos</h1>
+  <h3 class="text-xl font-thin">Pipes incluidos en Angular</h3>
+</section>
+
+<div class="stats shadow w-full">
+  <div class="stat place-items-center">
+    <div class="stat-title">LowerCase Pipe</div>
+    <div class="stat-value">{{uppercaseName() | lowercase}}</div>
+    <div class="stat-desc">{{uppercaseName()}}</div>
+  </div>
+
+  <div class="stat place-items-center">
+    <div class="stat-title">UpperCase Pipe</div>
+    <div class="stat-value">{{lowercaseName() | uppercase}}</div>
+    <div class="stat-desc">{{lowercaseName()}}</div>
+  </div>
+
+  <div class="stat place-items-center">
+    <div class="stat-title">TitleCase Pipe</div>
+    <div class="stat-value">{{fullName() | titlecase}}</div>
+    <div class="stat-desc">{{fullName()}}</div>
+  </div>
+</div>
