--- a/src/app/pages/basic-page/basic-page.html
+++ b/src/app/pages/basic-page/basic-page.html
@@ -3,7 +3,7 @@
   <h3 class="text-xl font-thin">Pipes incluidos en Angular</h3>
 </section>
 
-<div class="stats shadow w-full">
+<div class="stats stats-vertical lg:stats-horizontal shadow w-full">
   <div class="stat place-items-center">
     <div class="stat-title">LowerCase Pipe</div>
     <div class="stat-value">{{uppercaseName() | lowercase}}</div>
@@ -20,5 +20,59 @@
     <div class="stat-title">TitleCase Pipe</div>
     <div class="stat-value">{{fullName() | titlecase}}</div>
     <div class="stat-desc">{{fullName()}}</div>
+  </div>
+</div>
+
+<div class="divider"></div>
+
+<div class="stats stats-vertical lg:stats-horizontal shadow w-full">
+  <div class="stat place-items-center">
+    <div class="stat-title">Date Pipe</div>
+    <div class="stat-value">{{customDate() | date}}</div>
+    <div class="stat-desc">{{customDate()}}</div>
+  </div>
+
+  <div class="stat place-items-center">
+    <div class="stat-title">Date: long | GMT-6</div>
+    <div class="stat-value">{{customDate() | date: 'long' : 'GMT-6'}}</div>
+    <div class="stat-desc">{{customDate()}}</div>
+  </div>
+</div>
+
+<div class="divider"></div>
+
+<div class="stats stats-vertical lg:stats-horizontal shadow w-full">
+  <div class="stat place-items-center">
+    <div class="stat-title">Date: 'MMM yyyy'</div>
+    <div class="stat-value">{{customDate() | date: 'MMM yyyy'}}</div>
+    <div class="stat-desc">{{customDate()}}</div>
+  </div>
+
+  <div class="stat place-items-center">
+    <div class="stat-title">Date: short | GMT-3</div>
+    <div class="stat-value">{{customDate() | date: 'short' : 'GMT-3'}}</div>
+    <div class="stat-desc">{{customDate()}}</div>
+  </div>
+</div>
+
+<div class="divider"></div>
+
+<div class="stats stats-vertical lg:stats-horizontal shadow w-full">
+  <div class="stat place-items-center">
+    <div class="stat-title">Date: 'dd/MM/yyyy'</div>
+    <div class="stat-value">{{customDate() | date: 'dd/MM/yyyy'}}</div>
+    <div class="stat-desc">{{customDate()}}</div>
+  </div>
+
+  <div class="stat place-items-center">
+    <div class="stat-title">Date: 'HH:mm:ss'</div>
+    <div class="stat-value">{{customDate() | date: 'HH:mm:ss'}}</div>
+    <div class="stat-desc">{{customDate()}}</div>
+  </div>
+
+  <div class="stat place-items-center">
+    <div class="stat-title">Date: 'EEEE d, MMMM'</div>
+    <div class="stat-value">{{customDate() | date: 'EEEE d, MMMM'}}</div>
+    <div class="stat-desc">{{customDate()}}</div>
   </div>
 </div>
