--- a/src/app/pages/numbers-page/numbers-page.html
+++ b/src/app/pages/numbers-page/numbers-page.html
@@ -3,7 +3,7 @@
   <h3 class="text-xl font-thin">Pipes incluidos en Angular</h3>
 </section>
 
-<div class="stats shadow w-full">
+<div class="stats stats-vertical lg:stats-horizontal shadow w-full">
   <div class="stat place-items-center">
     <div class="stat-title">Number: '1.2-2'</div>
     <div class="stat-value">{{totalSales() | number: '1.2-2'}}</div>
