--- a/src/app/pages/numbers-page/numbers-page.html
+++ b/src/app/pages/numbers-page/numbers-page.html
@@ -18,7 +18,7 @@
 
   <div class="stat place-items-center">
     <div class="stat-title">Currency Pipe</div>
-    <div class="stat-value">{{totalSales() | currency: 'USD' : 'symbol-narrow' : '1.3-3'}}</div>
+    <div class="stat-value">{{totalSales() | currency: 'PEN' : 'symbol-narrow' : '1.3-3'}}</div>
     <div class="stat-desc">{{totalSales()}}</div>
   </div>
 
