--- a/src/app/pages/uncommon-page/uncommon-page.html
+++ b/src/app/pages/uncommon-page/uncommon-page.html
@@ -5,6 +5,12 @@
 
 <div class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-4">
   <app-card title="i18nSelectPipe">
-    <p>Hola desde el padre!</p>
+    <p>
+      Saludos {{client().name}}, es un placer
+      {{client().gender | i18nSelect: salutationMap}} a nuestro evento
+    </p>
+    <button (click)="switchClient()" class="btn btn-primary">
+      Cambiar cliente
+    </button>
   </app-card>
 </div>
