--- a/src/app/pages/uncommon-page/uncommon-page.html
+++ b/src/app/pages/uncommon-page/uncommon-page.html
@@ -13,4 +13,13 @@
       Cambiar cliente
     </button>
   </app-card>
+
+  <app-card title="i18nPluralPipe">
+    <p>
+      Actualmente {{clients().length | i18nPlural: clientsMap}} su turno
+    </p>
+    <button [disabled]="clients().length === 0" (click)="deleteClient()" class="btn btn-primary">
+      Borrar cliente
+    </button>
+  </app-card>
 </div>
