--- a/src/app/pages/uncommon-page/uncommon-page.html
+++ b/src/app/pages/uncommon-page/uncommon-page.html
@@ -22,4 +22,36 @@
       Borrar cliente
     </button>
   </app-card>
+
+  <app-card title="SlicePipe">
+    <b>Original</b>
+    <p class="text-primary">
+      {{clients().join(', ')}}
+    </p>
+
+    <b class="mt-2">Slice: 0 : 2</b>
+    <p class="text-primary">
+      {{clients() | slice: 0 : 2}}
+    </p>
+
+    <b class="mt-2">Slice: 1 : 3</b>
+    <p class="text-primary">
+      {{clients() | slice: 1 : 3}}
+    </p>
+
+    <b class="mt-2">Slice: 2 : 4</b>
+    <p class="text-primary">
+      {{clients() | slice: 2 : 4}}
+    </p>
+
+    <b class="mt-2">Slice: 5 : 8</b>
+    <p class="text-primary">
+      {{clients() | slice: 5 : 8}}
+    </p>
+
+    <b class="mt-2">Slice: 0 : -3</b>
+    <p class="text-primary">
+      {{clients() | slice: 0 : -3}}
+    </p>
+  </app-card>
 </div>
