--- a/src/app/pages/uncommon-page/uncommon-page.html
+++ b/src/app/pages/uncommon-page/uncommon-page.html
@@ -54,4 +54,10 @@
       {{clients() | slice: 0 : -3}}
     </p>
   </app-card>
+
+  <app-card title="JsonPipe">
+    <pre class="text-primary">{{clients() | json}}</pre>
+    <pre class="text-primary">{{client() | json}}</pre>
+    <p class="text-primary">{{clients().join(' - ') | json | uppercase}}</p>
+  </app-card>
 </div>
