--- a/src/app/pages/uncommon-page/uncommon-page.html
+++ b/src/app/pages/uncommon-page/uncommon-page.html
@@ -60,4 +60,22 @@
     <pre class="text-primary">{{client() | json}}</pre>
     <p class="text-primary">{{clients().join(' - ') | json | uppercase}}</p>
   </app-card>
+
+  <app-card title="KeyValuePipe">
+    <!-- <pre>{{profile | keyvalue | json}}</pre> -->
+    <b>Original</b>
+    <p class="text-primary">{{profile | json}}</p>
+
+    <b>Key - Value</b>
+    <ul>
+      @for (item of profile | keyvalue; track item.key) {
+      <li>
+        <strong class="text-primary">{{item.key | titlecase}}:</strong>
+        <span>
+          {{item.value}}
+        </span>
+      </li>
+      }
+    </ul>
+  </app-card>
 </div>
