--- a/src/app/pages/uncommon-page/uncommon-page.html
+++ b/src/app/pages/uncommon-page/uncommon-page.html
@@ -78,4 +78,12 @@
       }
     </ul>
   </app-card>
+
+  <app-card title="AsyncPipe">
+    <p>{{promiseValue | async}}</p>
+
+    @if (promiseValue | async; as value) {
+    <p class="text-primary">{{value}}</p>
+    }
+  </app-card>
 </div>
