--- a/src/app/pages/custom-page/custom-page.html
+++ b/src/app/pages/custom-page/custom-page.html
@@ -13,3 +13,41 @@
     </button>
   </div>
 </div>
+
+<div class="divider my-2"></div>
+
+<section class="my-2">
+  <h1 class="text-2xl font-bold">Pipes personalizados en acción</h1>
+  <div class="flex gap-2 justify-end w-full">
+    <button class="btn btn-primary">Por Nombre</button>
+    <button class="btn btn-accent">Vuela?</button>
+    <button class="btn btn-secondary">Por Color</button>
+    <button class="btn btn-info">Por Creador</button>
+  </div>
+</section>
+
+<section class="overflow-x-auto rounded-box border border-base-content/5 bg-base-100 w-full">
+  <table class="table table-xs w-full">
+    <!-- head -->
+    <thead>
+      <tr>
+        <th>#</th>
+        <th>Nombre</th>
+        <th>Puede volar?</th>
+        <th>Color</th>
+        <th>Creador</th>
+      </tr>
+    </thead>
+    <tbody>
+      @for (hero of heroes(); track hero.id; let i = $index) {
+      <tr>
+        <td>{{i+1}}</td>
+        <td>{{hero.name}}</td>
+        <td>{{hero.canFly}}</td>
+        <td>{{hero.color}}</td>
+        <td>{{hero.creator}}</td>
+      </tr>
+      }
+    </tbody>
+  </table>
+</section>
