--- a/src/app/pages/custom-page/custom-page.html
+++ b/src/app/pages/custom-page/custom-page.html
@@ -43,8 +43,16 @@
       <tr>
         <td>{{i+1}}</td>
         <td>{{hero.name}}</td>
-        <td>{{hero.canFly}}</td>
-        <td>{{hero.color}}</td>
+        <td>
+          <span class="text-xs w-44" [class.text-emerald-900]="hero.canFly" [class.text-orange-500]="!hero.canFly">
+            {{hero.canFly | canFly}}
+          </span>
+        </td>
+        <td>
+          <span class="text-xs w-44" [style.color]="hero.color | heroColor">
+            {{hero.color | heroColor}}
+          </span>
+        </td>
         <td>{{hero.creator}}</td>
       </tr>
       }
