--- a/src/app/pages/custom-page/custom-page.html
+++ b/src/app/pages/custom-page/custom-page.html
@@ -49,11 +49,15 @@
           </span>
         </td>
         <td>
-          <span class="text-xs w-44" [style.color]="hero.color | heroColor">
-            {{hero.color | heroColor}}
+          <span class="text-xs w-44" [style.color]="hero.color | heroTextColor">
+            {{hero.color | heroColor | titlecase}}
           </span>
         </td>
-        <td>{{hero.creator}}</td>
+        <td>
+          <span [class.text-blue-700]="hero.creator === 0" [class.text-red-600]="hero.creator === 1">
+            {{hero.creator | heroCreator}}
+          </span>
+        </td>
       </tr>
       }
     </tbody>
