--- a/src/app/pages/custom-page/custom-page.html
+++ b/src/app/pages/custom-page/custom-page.html
@@ -17,18 +17,17 @@
 <div class="divider my-2"></div>
 
 <section class="my-2">
-  <h1 class="text-2xl font-bold">Pipes personalizados en acción</h1>
+  <h1 class="text-2xl font-bold">Ordenando por: {{sortBy()}}</h1>
   <div class="flex gap-2 justify-end w-full">
-    <button class="btn btn-primary">Por Nombre</button>
-    <button class="btn btn-accent">Vuela?</button>
-    <button class="btn btn-secondary">Por Color</button>
-    <button class="btn btn-info">Por Creador</button>
+    <button (click)="sortBy.set('name')" class="btn btn-primary">Por Nombre</button>
+    <button (click)="sortBy.set('canFly')" class="btn btn-accent">Vuela?</button>
+    <button (click)="sortBy.set('color')" class="btn btn-secondary">Por Color</button>
+    <button (click)="sortBy.set('creator')" class="btn btn-info">Por Creador</button>
   </div>
 </section>
 
 <section class="overflow-x-auto rounded-box border border-base-content/5 bg-base-100 w-full">
   <table class="table table-xs w-full">
-    <!-- head -->
     <thead>
       <tr>
         <th>#</th>
@@ -39,7 +38,7 @@
       </tr>
     </thead>
     <tbody>
-      @for (hero of heroes(); track hero.id; let i = $index) {
+      @for (hero of heroes() | heroSortBy: sortBy(); track hero.id; let i = $index) {
       <tr>
         <td>{{i+1}}</td>
         <td>{{hero.name}}</td>
