--- a/src/app/pages/custom-page/custom-page.html
+++ b/src/app/pages/custom-page/custom-page.html
@@ -17,8 +17,11 @@
 <div class="divider my-2"></div>
 
 <section class="my-2">
-  <h1 class="text-2xl font-bold">Ordenando por: {{sortBy()}}</h1>
-  <div class="flex gap-2 justify-end w-full">
+  <h1 class="text-2xl font-bold">Filtrando por: {{searchQuery()}} | Ordenando por: {{sortBy()}}</h1>
+  <div class="flex gap-2 justify-end w-full mt-2">
+    <input type="text" class="input w-full max-w-xs" placeholder="Buscar héore"
+      (input)="searchQuery.set(txtSearch.value)" #txtSearch />
+    <div class="felx flex-1"></div>
     <button (click)="sortBy.set('name')" class="btn btn-primary">Por Nombre</button>
     <button (click)="sortBy.set('canFly')" class="btn btn-accent">Vuela?</button>
     <button (click)="sortBy.set('color')" class="btn btn-secondary">Por Color</button>
@@ -38,7 +41,7 @@
       </tr>
     </thead>
     <tbody>
-      @for (hero of heroes() | heroSortBy: sortBy(); track hero.id; let i = $index) {
+      @for (hero of heroes() | heroFilter: searchQuery() | heroSortBy: sortBy(); track hero.id; let i = $index) {
       <tr>
         <td>{{i+1}}</td>
         <td>{{hero.name}}</td>
